--- a/app/src/main/res/layout/fragment_musique.xml
+++ b/app/src/main/res/layout/fragment_musique.xml
@@ -2,12 +2,92 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.k2m.improvisation.MusiqueFragment">
+    tools:context="com.k2m.improvisation.MusiqueFragment"
+    android:gravity="center"
+    android:layout_gravity="center">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
+
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:orientation="vertical"
+       android:gravity="center|top"
+       android:layout_gravity="center|top">
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal"
+           android:gravity="center"
+           android:layout_gravity="center"
+           android:background="@color/colw">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="1"
+               android:textSize="50dp"
+               android:padding="55dp"
+               android:gravity="center"
+               android:layout_gravity="center"
+               android:layout_marginRight="35dp"/>
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="2"
+               android:textSize="50dp"
+               android:padding="55dp"
+               android:gravity="center"
+               android:layout_gravity="center"
+               android:layout_marginLeft="35dp"/>
+
+       </LinearLayout>
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal"
+           android:gravity="center"
+           android:layout_gravity="center"
+           android:background="@color/cola">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="3"
+               android:textSize="50dp"
+               android:padding="55dp"
+               android:layout_marginRight="35dp"/>
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="4"
+               android:textSize="50dp"
+               android:padding="55dp"
+               android:layout_marginLeft="35dp"/>
+
+       </LinearLayout>
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal"
+           android:gravity="center"
+           android:layout_gravity="center"
+           android:background="@color/colt">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="5"
+               android:textSize="50dp"
+               android:padding="58dp"
+               android:layout_marginRight="35dp"/>
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="6"
+               android:textSize="50dp"
+               android:padding="58dp"
+               android:layout_marginLeft="35dp"/>
+
+       </LinearLayout>
+
+   </LinearLayout>
 </FrameLayout>
